# Rinnegan-v3

./: .gitignore  README.md
chess-engine/: CMakeLists.txt
chess-engine/src/: bitboard.cpp  bitboard.h  eval.cpp  eval.h  magics.cpp  magics.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  see.cpp  see.h  thread.h  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
chess-engine/tests/: anchors.conf  gauntlet_elo.sh  openings.epd  perft_main.cpp  sprt_v2_vs_v1.sh  sprt_v3_vs_v2.sh  sprt_v4_vs_v3.sh  v2_vs_v1.pgn
chess-engine/tools/: openbench-build.sh
chess-engine/tools/nnue/: README.md  label_with_stockfish.py  make_positions.py  requirements.txt  run_depth40_experiment.sh  stockfish_setup.py  train_rinnegan_nnue.py
